Fix Height and layout of Config Provider Pages
Summary:
Reduced min-height to prevent action buttons from overflowing in y direction.
Changed datacenter string to datacenters.
Made the Regions, Zones and Hosts columns of same height for On-Prem Config.
{F3030}

{F3031}

{F3032}

{F3033}

{F3034}

Test Plan:
Go To config tabs in UI.
Verify layout looks as expected.

Reviewers: karthik, shawn, ram

Reviewed By: ram

Subscribers: sid, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D1633

--- a/managed/ui/src/app/stylesheets/tabs.scss
+++ b/managed/ui/src/app/stylesheets/tabs.scss
@@ -26,10 +26,10 @@
 .tab-content {
   position: relative;
   margin: 0;
-  padding: 20px;
-  padding-top: 15px;
+  padding: 5px 20px;
   border: 1px solid #ddd;
   border-top: none;
   background-color: #fdfdfc;
-  min-height: 600px;
+  min-height: 500px;
+  height: 100%;
 }
